# ccmNew

./: .gitignore  IDCCommon.cmake.joymed
COManager/: CMakeLists.txt
COManager/inc/: COApp.h  COComm.h  COMain.h  Master.h  MasterOD.h
COManager/src/: COApp.cpp  COMain.cpp  Master.cpp  MasterOD.cpp
ColVD/: CMakeLists.txt
ColVD/inc/: ColLogical.h  ColMaster.h  ColXtp.h
ColVD/src/: ColLogical.cpp  ColMaster.cpp  ColXtp.cpp  main.cpp
GeneratorVD/: CMakeLists.txt
GeneratorVD/inc/: .GenMain.h.swp  GenMain.h  GenStateM.h  GenXtp.h  HeatUnitCal.h
GeneratorVD/src/: GenMain.cpp  GenStateM.cpp  GenXtp.cpp  HeatUnitCal.cpp
IDCLibs/IDCBase/: CMakeLists.txt
IDCLibs/IDCBase/inc/: IDCAlarm.h  IDCMsgQueue.h  IDCSema.h  IDCThread.h
IDCLibs/IDCBase/src/: IDCAlarm.cpp  IDCMsgQueue.cpp  IDCSema.cpp  IDCThread.cpp
IDCLibs/IDCLog/LogSrv/: cfg.cpp  cfg.h  server.cpp
IDCLibs/IDCLog/inc/: LogTrace.h
IDCLibs/IDCLog/src/: LogTrace.cpp
IDCLibs/IDCXTP/Client/inc/: xtpClient.h
IDCLibs/IDCXTP/Client/src/: xtpClient.cpp
IDCLibs/IDCXTP/Server/: CMakeLists.txt
IDCLibs/IDCXTP/Server/inc/: ExtComm.h  msgqueue.h
IDCLibs/IDCXTP/Server/src/: ExtComm.cpp  msgqueue.cpp  xtpServer.cpp
IDCLibs/IDCXTP/inc/: xtpcomm.h  xtpobj.h
TUI/: TUI.pro  mainwindow.ui
XMaster/: CMakeLists.txt
XMaster/inc/: CurvePoints.h  Fluoro.h  Init.h  XtpCom.h  curves.h  epTable.h  epType.h  ep_table_16_1.h  eptables.h
XMaster/src/: CurvePoints.cpp  Fluoro.cpp  Init.cpp  XtpCom.cpp  curves.cpp  eptables.cpp
inc/: IDCTaskID.h  IDCType.h  eptables.h
untitled/: HmiXtp.cpp  HmiXtp.h  eptables.cpp  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled.pro
untitled/ui/: S3pExpertMode.ui  S3pSimpleMode.ui  classicStyle.ui  classicStyle_rot.ui  confirmYesNo.ui  confirmation.ui  examination.ui  keyboard.ui  password.ui  s3pMain.ui
